--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.2",
     "@types/react": "^18.3.9",
-    "@types/react-dom": "^18.3.0"
+    "@types/react-dom": "^18.3.0",
+    "rollup": "2.79.2"
   }
 }
