--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -25,11 +25,12 @@ jobs:
         run: npm run build
 
       - name: Deploy to FTP
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.1
+        # https://github.com/SamKirkland/FTP-Deploy-Action
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: build/  # The directory containing your built React app
-          remote-dir: /www/1234.ch/react-ts-jquery  # Adjust to your desired remote directory
+          server-dir: /www/1234.ch/react-ts-jquery/  # Adjust to your desired remote directory
           clean-remote: true  # Optionally clean the remote directory before deployment
